--- a/Teaser.ipynb
+++ b/Teaser.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5daf9905e128ddd5e16ca94a322d3da0ffcdba59c86dc756059f46e56742307c"
+  "signature": "sha256:d5980c13cd66745a19abcec4e0b5ff6ba3ddbcf7f81dc8eb5e1a5e2e438c77dc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1133,6 +1133,14 @@
      "prompt_number": 10
     },
     {
+     "cell_type": "heading",
+     "level": 4,
+     "metadata": {},
+     "source": [
+      "Heatmap"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -1186,14 +1194,6 @@
       }
      ],
      "prompt_number": 13
-    },
-    {
-     "cell_type": "heading",
-     "level": 5,
-     "metadata": {},
-     "source": [
-      "Zoom"
-     ]
     },
     {
      "cell_type": "heading",
