--- a/Teaser.ipynb
+++ b/Teaser.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:30754758634319b796fa17135b8f684255bf92fcd001cc445f120a4fd7d3c6e7"
+  "signature": "sha256:3c76edb6642656b409b842bafa87a58757ff1fdb41f4c65cfe808b165da15c6a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -536,10 +536,10 @@
     },
     {
      "cell_type": "heading",
-     "level": 3,
+     "level": 2,
      "metadata": {},
      "source": [
-      "Inputs:"
+      "1) Inputs:"
      ]
     },
     {
@@ -573,10 +573,10 @@
     },
     {
      "cell_type": "heading",
-     "level": 3,
+     "level": 2,
      "metadata": {},
      "source": [
-      "Functions:"
+      "2) Functions:"
      ]
     },
     {
@@ -673,7 +673,7 @@
       "\n",
       "def calc_total_prob_at_xy(x, y, factor, threshold):\n",
       "    \"\"\" Calculates the probability of finding the top analyst in a given location,\n",
-      "        where x=[x,y] are the distances (in km) to the origin characterized elsewhere by O_lat, O_lon. \n",
+      "        where x,y are the distances (in km) to the origin characterized elsewhere by O_lat, O_lon. \n",
       "          - factor: can be used to return the minus prob (factor=-1.), or to normalize prob.\n",
       "          - threshold: probs below this value are set to zero (set threshold=0 to avoid this option)\"\"\"\n",
       "    totalprob = factor*(calc_prob_Spree_at_xy(x, y) * calc_prob_BradGate_at_xy(x, y) * calc_prob_Sat_at_xy(x, y))\n",
@@ -697,7 +697,7 @@
       "# *************************************************************\n",
       "def create_new_GMap(center_lat=52.521123, center_lon=13.407478, zoomini=11, map_type=\"terrain\",\n",
       "                    Hover=False, formataxis=\"0.00\", title=None):\n",
-      "    \"\"\" returns a new plot with a set of properties\"\"\"\n",
+      "    \"\"\" returns a new bokeh-googlemap plot with a set of properties\"\"\"\n",
       "    p = GMapPlot(title=title, title_text_font_size='12pt', title_text_color='black',\n",
       "                 plot_width=570, plot_height=500,\n",
       "                 x_range = Range1d(), y_range = Range1d(),\n",
@@ -711,11 +711,15 @@
       "    p.add_tools(PanTool(), WheelZoomTool())\n",
       "    if Hover: p.add_tools(HoverTool())\n",
       "    return p\n",
-      "\n",
-      "def calc_colors4map_given_probs(probs, color_palette, filter_grid = 5, alphafixed=99, alphaboost=2.3, alphamin=0.2):\n",
+      "    \n",
+      "def calc_heatmapcolors_from_probs(probs, color_palette, filter_grid = 5, alphafixed=99, alphaboost=2.3, alphamin=0.2):\n",
       "    \"\"\" Given a matrix with probabilities and a palette of colors, returns the colors to build a heat map,\n",
-      "        and the alphas (coeficient of transparency, the higher the prob the less transparent), but note that\n",
-      "        these are returned in a flattened array instead of the original matrix format of the probabilities \"\"\"\n",
+      "        (the color of each cell of the heat map) and the coeficients of transparency (alphas).\n",
+      "        The function arguments alphafixed, alphaboost, and alphamin control wether the transparency is uniform\n",
+      "        or variable (the higher the prob the less transparent). Note that the alphas are returned in a \n",
+      "        flattened array instead of the original matrix format of the probabilities.\n",
+      "        filter_grid defines which colors are removed from the plot (those with lower probs). This information\n",
+      "        is stored and returned in filter_mask to be used by other functions.\"\"\"\n",
       "    min = np.min(probs)\n",
       "    max = np.max(probs)\n",
       "    step = (max-min)/(len(color_palette)-1)\n",
@@ -730,9 +734,10 @@
       "    colors = [color_palette[i] for i in np.nditer(colors)]\n",
       "    return colors, alphas, filter_mask\n",
       "\n",
-      "# adding data to the already existing source step by step, if all at the same time only prints first ~18:\n",
       "def add_heatmap_to_plot(p, colors, alphas, filter_mask):\n",
-      "    \"\"\" the rectangles for the heatmap are added in batches of 15, because doing everything at \"\"\"\n",
+      "    \"\"\" Returns the plot p with the heatmap plotted as set by colors, alphas and filter_mask.\n",
+      "        The rectangles for the heatmap are added in batches of 15, because doing everything in only one step\n",
+      "        is not correctly performed by bokeh (is only able to show the first ~18). \"\"\"\n",
       "    source = ColumnDataSource(data=dict())\n",
       "    width  = (Lons[-1]-Lons[0])*1.05/len(Lons) \n",
       "    height = (Lats[-1]-Lats[0])*1.05/len(Lats)  \n",
@@ -759,7 +764,7 @@
       "    Returns the coordinates of 3 contours of equal probability. \n",
       "    By default, these contours are those that contain 75, 50 and 25% of the total probability.\n",
       "    The values were obtained normalizing the total probability and integrating over the contours.\n",
-      "    Setting recalc_integrals=True and will recalculate the probability inside the contours.\n",
+      "    Setting recalc_integrals=True will recalculate the probability inside the contours.\n",
       "    \"\"\"\n",
       "    Lats_mat, Lons_mat = np.meshgrid(Lats, Lons)\n",
       "    c = cntr.Cntr(Lons_mat,Lats_mat,probs_total)\n",
@@ -781,6 +786,7 @@
       "def integrate_prob_inside_contour(prob_cont):\n",
       "    \"\"\"\n",
       "    Calculates the probability of the top analyst being inside a contour of iso-probability prob_cont.\n",
+      "    Setting recalc_norm=True will recalculate the integral of the probability over all the map.\n",
       "    \"\"\"\n",
       "    total_integral = integrate_total_prob(recalc_norm=False)\n",
       "    probinsidecont = sp.integrate.nquad(calc_total_prob_at_xy, [[x_min_cont, x_max_cont], [y_min_cont, y_max_cont]],\n",
@@ -820,10 +826,18 @@
     },
     {
      "cell_type": "heading",
-     "level": 3,
+     "level": 2,
      "metadata": {},
      "source": [
-      "Calculation of probabilities for the maps:"
+      "3) Calculations:"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 4,
+     "metadata": {},
+     "source": [
+      "Calculation of probabilities from independent sources for the 3 separate maps:"
      ]
     },
     {
@@ -850,17 +864,17 @@
     },
     {
      "cell_type": "heading",
-     "level": 3,
+     "level": 4,
      "metadata": {},
      "source": [
-      "Calculation of the most likely location of the top analyst:"
+      "Calculation of the most likely location of the top analyst joining the independent informations:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# our initial guess is the point with max probability in the the grid:\n",
+      "# our initial guess is the point with max probability in the grid:\n",
       "probs_total = probs_Spree * probs_BradGate * probs_Sat\n",
       "coords_max_gridprob = [Lats_map[probs_total.argmax()], Lons_map[probs_total.argmax()]]\n",
       "x0 = convert_latlon_to_xy(coords_max_gridprob[0], coords_max_gridprob[1])\n",
@@ -892,10 +906,18 @@
     },
     {
      "cell_type": "heading",
-     "level": 3,
+     "level": 2,
      "metadata": {},
      "source": [
-      "Plotting maps:"
+      "4) Plotting maps:"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 4,
+     "metadata": {},
+     "source": [
+      "4.1) Separately from the 3 independent sources of information:"
      ]
     },
     {
@@ -918,7 +940,7 @@
       "\n",
       "# the probabilities to find the top analyst in a heat map:\n",
       "colors_Spree = [rgb2hex(color) for color in sns.color_palette(\"Blues\",20)]\n",
-      "colors, alphas, filter_mask = calc_colors4map_given_probs(probs_Spree, colors_Spree)\n",
+      "colors, alphas, filter_mask = calc_heatmapcolors_from_probs(probs_Spree, colors_Spree)\n",
       "p_Spree = add_heatmap_to_plot(p_Spree, colors, alphas, filter_mask)\n",
       "bk.output_file(\"Spree.html\",  mode=\"cdn\")\n",
       "bk.show(p_Spree)"
@@ -973,7 +995,7 @@
       "\n",
       "# the probabilities to find the top analyst in a heat map:\n",
       "colors_BradGate = [rgb2hex(color) for color in sns.color_palette(\"Greens\",20)]\n",
-      "colors, alphas, filter_mask = calc_colors4map_given_probs(probs_BradGate, colors_BradGate)\n",
+      "colors, alphas, filter_mask = calc_heatmapcolors_from_probs(probs_BradGate, colors_BradGate)\n",
       "p_BradGate = add_heatmap_to_plot(p_BradGate, colors, alphas, filter_mask)\n",
       "bk.output_file(\"BradGate.html\",  mode=\"cdn\")\n",
       "bk.show(p_BradGate)"
@@ -1028,7 +1050,7 @@
       "\n",
       "# the probabilities to find the top analyst in a heat map:\n",
       "colors_Sat = [rgb2hex(color) for color in sns.color_palette(\"Reds\",20)]\n",
-      "colors, alphas, filter_mask = calc_colors4map_given_probs(probs_Sat, colors_Sat)\n",
+      "colors, alphas, filter_mask = calc_heatmapcolors_from_probs(probs_Sat, colors_Sat)\n",
       "p_Sat = add_heatmap_to_plot(p_Sat, colors, alphas, filter_mask)\n",
       "bk.output_file(\"Satellite.html\",  mode=\"cdn\")\n",
       "bk.show(p_Sat)"
@@ -1062,6 +1084,14 @@
       }
      ],
      "prompt_number": 9
+    },
+    {
+     "cell_type": "heading",
+     "level": 4,
+     "metadata": {},
+     "source": [
+      "4.2) Final probability (joining the 3 independent sources of info)"
+     ]
     },
     {
      "cell_type": "heading",
@@ -1135,10 +1165,10 @@
     },
     {
      "cell_type": "heading",
-     "level": 4,
+     "level": 5,
      "metadata": {},
      "source": [
-      "Heatmap"
+      "Heatmap (medium zoom)"
      ]
     },
     {
@@ -1158,7 +1188,7 @@
       "p_heatmap = create_new_GMap(center_lat=coords_max_prob[0], center_lon=coords_max_prob[1], zoomini=14, formataxis=\"0.000\",\n",
       "                            title=\"      Heatmap: the hotter, the more probable to find the top analyst there\")\n",
       "colors_WColdHot = ['#FFFFFF','#FFFFFF','#FFFFFF','#FFFFFF','#FFFFFF','#FFFFFF', '#0020E5', '#0075DE', '#00C6D8', '#00D293', '#00CC3F', '#0FC600', '#59C000', '#9EBA00', '#B48900', '#AE4100', '#A80001']\n",
-      "colors, alphas, filter_mask = calc_colors4map_given_probs(probs_total, colors_WColdHot, alphafixed=0.5, filter_grid=3)\n",
+      "colors, alphas, filter_mask = calc_heatmapcolors_from_probs(probs_total, colors_WColdHot, alphafixed=0.5, filter_grid=3)\n",
       "p_heatmap = add_heatmap_to_plot(p_heatmap, colors, alphas, filter_mask)\n",
       "\n",
       "# a circle and a cross in the location of max total probability:\n",
@@ -1205,7 +1235,7 @@
      "level": 5,
      "metadata": {},
      "source": [
-      "Zoom on google earth"
+      "Google Earth picture (large zoom)"
      ]
     },
     {
